docs: consolidate project documentation and update module READMEs
- Restructure documentation into a centralized /docs directory
- Synchronize README files across root, dsl, core, and server modules
- Improve cross-linking between architectural components